--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<header>
+        <% include ./partials/_header %>
+</header>
   <head>
     <title>Home Page</title>
 
