--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -4,17 +4,30 @@
         <% include ./partials/_header %>
 </header>
   <head>
-    <title>Home Page</title>
+    <title>Menu</title>
 
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/menu.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <container class = "MenuPageContainer">
+      <div class = "product">
+        <img class = "produtImage" src="" alt="">
+        <span class = "productDescription"></span>
+        <div>
+          <span>itemcount</span>
+          <span>Price</span>
+          <button>+</button>
+          <button>-</button>
+        </div>
+      </div>
+    </container>
   </body>
 </html>
+
+
