--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -17,13 +17,16 @@
   <body>
     <container class = "MenuPageContainer">
       <div class = "product">
-        <img class = "produtImage" src="" alt="">
-        <span class = "productDescription"></span>
-        <div>
+        <span class = "itemTitle">title</span>
+        <img class = "productImage" src="" alt="">
+        <span class = "productDescription">hello man</span>
+        <div class = "add2cart">
           <span>itemcount</span>
           <span>Price</span>
-          <button>+</button>
-          <button>-</button>
+          <div>
+            <button>+</button>
+            <button>-</button>
+          </div>
         </div>
       </div>
     </container>
