--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -9,11 +9,12 @@ body {
 }
 
 
-
 .MenuPageContainer {
   display:grid;
   grid-template-columns: 300px 300px 300px;
   grid-template-rows: auto;
+  grid-column-gap: 80px;
+  grid-row-gap: 80px;
   margin: 100px;
 
 }
@@ -21,19 +22,44 @@ body {
 .product {
   border: 2px solid red;
   max-width: 300px;
-  height: 300px;
   display:flex;
   flex-direction:column;
+  margin: 30px;
 }
 
+.imageWrapper {
+
+}
+
+
 .productImage {
-  border: 2px solid purple;
-  max-width: 200px;
-  max-height: 200px;
+  max-height: 250px;
+  width:100%;
+  height:100%;
+  border: 2px solid yellow;
+  background-image: center;
+  background-repeat: no-repeat;
+  object-fit:cover;
+
+}
+
+.columnWrapper {
+  background-color: yellow;
+  padding: 20px;
+  min-height: 100px;
+
+}
+
+.productDescription {
+  min-height: 30px;
+
 }
 
 .add2cart {
+  padding-top:10px;
+  padding-bottom: 5px;
   border: 2px solid green;
   display:flex;
   justify-content: space-between;
+
 }
