--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -15,20 +15,30 @@
   </head>
 
   <body>
+
     <container class = "MenuPageContainer">
+
+      <% for (item in menuItems) { %>
       <div class = "product">
-        <span class = "itemTitle">title</span>
-        <img class = "productImage" src="" alt="">
-        <span class = "productDescription">hello man</span>
+        <div class = "columnWrapper">
+        <span class = "itemTitle"><%= menuItems[item].name %></span>
+        </div>
+        <div class = "imageWrapper">
+        <img class = "productImage" src=<%= menuItems[item].image_url %> >
+        </div>
+        <div class = "columnWrapper">
+          <span class = "productDescription"><%=menuItems[item].description %></span>
+        </div>
         <div class = "add2cart">
           <span>itemcount</span>
-          <span>Price</span>
+          <span><%= menuItems[item].price %></span>
           <div>
             <button>+</button>
             <button>-</button>
           </div>
         </div>
       </div>
+      <% } %>
     </container>
   </body>
 </html>
