created object to store cart continents

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -30,7 +30,7 @@
           <span class = "productDescription"><%=item.description %></span>
         </div>
         <div class = "add2cart">
-          <span>itemcount</span>
+          <span class = "itemCount">0</span>
           <span><%= item.price %></span>
           <div>
             <button class="buttonCount">+</button>
