--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -31,7 +31,7 @@
         </div>
         <div class = "add2cart">
           <span class = "itemCount">0</span>
-          <span><%= item.price %></span>
+          <span class = "itemPrice"><%= item.price %></span>
           <div>
             <button class="buttonCount">+</button>
             <button class="buttonCount">-</button>
