worked on css for menu page

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,7 @@
 
-<header>
+<header class = "partialHeader">
   <nav>
-    <a href="/checkout">Slav's Kitchen</a>
+    <a href="/">Slav's Kitchen</a>
       <div style="text-align: right">
           <form class="form-inline" action="/checkout" method="GET">
           <button type="submit"  class="btn-checkout">checkout</button>
