--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -16,35 +16,42 @@ body {
   grid-column-gap: 80px;
   grid-row-gap: 80px;
   margin: 100px;
+  background-image: url("https://images.unsplash.com/photo-1530652939501-242d51dfeee4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80");
 
 }
 
 .product {
-  border: 2px solid red;
-  max-width: 300px;
   display:flex;
+  background-color: whitesmoke;
+  max-width: 300px;
   flex-direction:column;
-  margin: 30px;
+  margin-left: 30px;
+  margin-top: 30px;
+  border-radius: 5px;
+
 }
 
 .imageWrapper {
+  align-self:center;
+  height: 220px;
+  width: 220px;
 
 }
 
 
 .productImage {
-  max-height: 250px;
-  width:100%;
-  height:100%;
-  border: 2px solid yellow;
-  background-image: center;
+  display:flex;
+  height:220px;
+  width:220px;
+  margin-left: auto;
+  margin-right: auto;
   background-repeat: no-repeat;
   object-fit:cover;
 
 }
 
 .columnWrapper {
-  background-color: yellow;
+  align-self:center;
   padding: 20px;
   min-height: 100px;
 
@@ -58,8 +65,19 @@ body {
 .add2cart {
   padding-top:10px;
   padding-bottom: 5px;
-  border: 2px solid green;
+  padding-left: 4px;
+  padding-right: 4px;
   display:flex;
   justify-content: space-between;
 
+}
+
+.plus {
+  background:green;
+  border-radius: 5px;
+}
+
+.minus {
+  background:red;
+  border-radius: 5px;
 }
