--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/menu.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
@@ -30,11 +32,14 @@
           <span class = "productDescription"><%=item.description %></span>
         </div>
         <div class = "add2cart">
-          <span class = "itemCount">0</span>
-          <span class = "itemPrice"><%= item.price %></span>
           <div>
-            <button class="buttonCount">+</button>
-            <button class="buttonCount">-</button>
+            <span class = "itemCountLabel">Item Total: </span>
+            <span class = "itemCount">0</span>
+          </div>
+          <span class = "itemPrice">$<%= item.price %></span>
+          <div>
+            <button class="buttonCount plus">+</button>
+            <button class="buttonCount minus">-</button>
           </div>
         </div>
       </div>
