--- a/views/owners.ejs
+++ b/views/owners.ejs
@@ -8,18 +8,19 @@
         crossorigin="anonymous"></script>
               <script src = "/scripts/owners.js"></script>
 </header>
-  <head>
+
 
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/owners.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
-  </head>
+
 
   <body>
-      <container class = "checkoutLayout">
+<container class= "ownersContainer">
           <div>
             <table class="itemTable">
               <tr class = "headerTable">
@@ -32,12 +33,14 @@
               <tr><td>Total</td><td class = "itemTotal"><td class = "amountTotal"></td></tr>
             </table>
           </div>
-            <th> When should we tell x to pickup his order ?</th>
-            <div class = "waitTime">
+
+           <div class = "waitTime">
+           <th> When should we tell x to pickup his order ?</th>
             <input  type="text" placeholder="waitingTime" id="waitingTime">
+            <button class= "time">Submit</button>
 
             </div>
 
-
+          </container>
   </body>
  </html>
