created nested db.query for injection or order into the db

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -36,7 +36,7 @@
             <span class = "itemCountLabel">Item Total: </span>
             <span class = "itemCount">0</span>
           </div>
-          <span class = "itemPrice">$<%= item.price %></span>
+          <span class = "itemPrice"><%= item.price %></span>
           <div>
             <button class="buttonCount plus">+</button>
             <button class="buttonCount minus">-</button>
