--- a/styles/owners.scss
+++ b/styles/owners.scss
@@ -12,6 +12,13 @@
   justify-content: space-between;
   flex-direction: column;
  align-items: center;
+ flex-grow: 5;
 }
 
-
+.itemTable {
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
