added some scc to the owner's page and some code on it's route

--- a/views/owners.ejs
+++ b/views/owners.ejs
@@ -14,15 +14,14 @@
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/owners.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
 
 
   <body>
 <container class= "ownersContainer">
-          <div>
-            <table class="itemTable">
+          <div class='itemTable'>
+            <table class='itemTable'>
               <tr class = "headerTable">
                 <th>Items</th>
                 <th>Quantity</th>
@@ -30,7 +29,7 @@
               </tr>
 
 
-              <tr><td>Total</td><td class = "itemTotal"><td class = "amountTotal"></td></tr>
+              <tr class='Total'><td>Total</td><td class = "itemTotal"><td class = "amountTotal"></td></tr>
             </table>
           </div>
 
