--- a/styles/owners.scss
+++ b/styles/owners.scss
@@ -3,7 +3,7 @@
 .ownersContainer {
   display: flex;
   justify-content: space-between;
-
+  height: 450px;
 }
 
 .waitTime {
@@ -12,7 +12,7 @@
   justify-content: space-between;
   flex-direction: column;
  align-items: center;
- flex-grow: 5;
+ flex-grow: 1.25
 }
 
 .itemTable {
@@ -21,4 +21,10 @@
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
+  flex-grow: 1.7;
+}
+
+.Total {
+  display: flex;
+  margin-bottom: auto;
 }
