worked on checkout ebjs.  Hidding customer inputs on pressing checkout button.  Displaying span for post checkout.  Installed and tested Twilio

--- a/styles/checkout.scss
+++ b/styles/checkout.scss
@@ -12,3 +12,11 @@
   flex-direction: column;
   align-content: space-between;
 }
+
+
+
+#postOrder {
+  display: none;
+  width: 300px;
+  height: 200px;
+}
