--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -36,6 +36,7 @@
 
       </div>
       <div class = "payment">
+        <span id = "postOrder">Thanks for your order Jeff.  Please standbye for updates</span>
         <input type="text" placeholder="Name" id="name">
         <input type="text" placeholder="Email" id="email">
         <input type="text" placeholder="Phone Number" id="phone_number">
