--- a/styles/owners.scss
+++ b/styles/owners.scss
@@ -1,30 +1,30 @@
 
 
-.ownersContainer {
-  display: flex;
-  justify-content: space-between;
-  height: 450px;
-}
+// .ownersContainer {
+//   display: flex;
+//   justify-content: space-between;
+//   height: 450px;
+// }
 
-.waitTime {
-  border: 1px solid black;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
- align-items: center;
- flex-grow: 1.25
-}
+// .waitTime {
+//   border: 1px solid black;
+//   display: flex;
+//   justify-content: space-between;
+//   flex-direction: column;
+//  align-items: center;
+//  flex-grow: 1.25
+// }
 
-.itemTable {
-  border: 1px solid black;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  align-items: center;
-  flex-grow: 1.7;
-}
+// .itemTable {
+//   border: 1px solid black;
+//   display: flex;
+//   justify-content: space-between;
+//   flex-direction: column;
+//   align-items: center;
+//   flex-grow: 1.7;
+// }
 
-.Total {
-  display: flex;
-  margin-bottom: auto;
-}
+// .Total {
+//   display: flex;
+//   margin-bottom: auto;
+// }
