--- a/views/owners.ejs
+++ b/views/owners.ejs
@@ -19,27 +19,44 @@
 
 
   <body>
-<container class= "ownersContainer">
-          <div class='itemTable'>
-            <table class='itemTable'>
-              <tr class = "headerTable">
-                <th>Items</th>
-                <th>Quantity</th>
-                <th>Amount</th>
-              </tr>
+    <container class= "ownersContainer">
+      <div class='itemTable'>
+        <table class='itemTable'>
+          <tr class = "headerTable">
+            <th>Items</th>
+            <th>Quantity</th>
+            <th>Price</th>
+          </tr>
+
+          <% for (item in order.items) { %>
+          <tr>
+            <td> <%= order.items[item].name %> </td><td><%= order.items[item].quantity %> </td><td> <%= order.items[item].price %> </td><td> <%= order.items[item].price * order.items[item].quantity %> </td>
+            <!-- <td><%= order.items[item].quantity %> </td>
+            <td><%= order.items[item].price %> </td>
+            <td><%= order.items[item].price * order.items[item].quantity %> </td> -->
 
 
-              <tr class='Total'><td>Total</td><td class = "itemTotal"><td class = "amountTotal"></td></tr>
+          </tr>
+
+           <%  console.log("EBS", order.items[item].name, order.items[item].price, order.items[item].quantity) %>
+
+           <% } %>
+
+          </table>
+          <tr class='Total'><td>Total</td><td class = "itemTotal"><td class = "amountTotal"></td></tr>
+          <table>
+            </table>
             </table>
           </div>
 
-           <div class = "waitTime">
-           <th> When should we tell x to pickup his order ?</th>
+
+          <div class = "waitTime">
+            <th> When should we tell x to pickup his order ?</th>
             <input  type="text" placeholder="waitingTime" id="waitingTime">
             <button class= "time">Submit</button>
 
-            </div>
+          </div>
 
-          </container>
-  </body>
+        </container>
+        </body>
  </html>
