fetching the customer name to the orders page and displaying it

--- a/views/owners.ejs
+++ b/views/owners.ejs
@@ -51,7 +51,7 @@
 
 
           <div class = "waitTime">
-            <th> When should we tell x to pickup his order ?</th>
+            <th> When should we tell <%= order.customer_name %> to pickup his order ?</th>
             <input  type="text" placeholder="waitingTime" id="waitingTime">
             <button class= "time">Submit</button>
 
