--- a/views/owners.ejs
+++ b/views/owners.ejs
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/styles/owners.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/owners.js"></script>
 
 
   <body>
