fixed up css on menu page

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/checkout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+
 
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
