--- a/styles/header.scss
+++ b/styles/header.scss
@@ -6,7 +6,7 @@
 
 header nav {
   display:flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 
 }
@@ -18,6 +18,8 @@ header nav a {
   width: 400px;
   text-decoration: none;
   font-size: 40px;
+  font-family: 'Permanent Marker', cursive;
+  margin-left: 100px;
 }
 
 
