--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -11,42 +11,50 @@ body {
 
 .MenuPageContainer {
   display:grid;
-  grid-template-columns: 300px 300px 300px;
+  grid-template-columns: 500px 500px 500px;
   grid-template-rows: auto;
   grid-column-gap: 80px;
   grid-row-gap: 80px;
-  margin: 100px;
-  background-image: url("https://images.unsplash.com/photo-1530652939501-242d51dfeee4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80");
+
+  background-image: url("https://images.unsplash.com/photo-1526494351053-7f0eee3c4216?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80");
 
 }
 
 .product {
   display:flex;
   background-color: whitesmoke;
-  max-width: 300px;
+  max-width: 500px;
   flex-direction:column;
   margin-left: 30px;
-  margin-top: 30px;
+  margin-top: 25px;
   border-radius: 5px;
+  font-family: 'Permanent Marker', cursive;
+  //box-shadow: 0px 0px 20px 10px red;
+  border:solid 5px black;
+  border-radius: 50px;
+  background-image:round;
+
 
 }
 
 .imageWrapper {
   align-self:center;
-  height: 220px;
-  width: 220px;
+  height: 300px;
+  width: 300px;
 
 }
 
 
 .productImage {
   display:flex;
-  height:220px;
-  width:220px;
+  height:300px;
+  width:300px;
   margin-left: auto;
   margin-right: auto;
   background-repeat: no-repeat;
   object-fit:cover;
+  border:groove 1px;
+  border-radius: 15px;
 
 }
 
@@ -59,16 +67,20 @@ body {
 
 .productDescription {
   min-height: 30px;
-
+  font-size: 20px;
 }
 
+
 .add2cart {
+  align-self: center;
   padding-top:10px;
-  padding-bottom: 5px;
+  padding-bottom: 15px;
   padding-left: 4px;
   padding-right: 4px;
   display:flex;
   justify-content: space-between;
+  min-width: 400px;
+  font-size: 20px;
 
 }
 
@@ -81,3 +93,41 @@ body {
   background:red;
   border-radius: 5px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.itemTitle{
+  font-size: 30px;
+}
+
