--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/menu.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+
 
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -36,7 +38,10 @@
             <span class = "itemCountLabel">Item Total: </span>
             <span class = "itemCount">0</span>
           </div>
-          <span class = "itemPrice"><%= item.price %></span>
+          <div>
+            <span>$</span>
+            <span class = "itemPrice"><%= item.price %></span>
+          </div>
           <div>
             <button class="buttonCount plus">+</button>
             <button class="buttonCount minus">-</button>
