--- a/styles/checkout.scss
+++ b/styles/checkout.scss
@@ -1,12 +1,16 @@
 .checkoutLayout {
+  height: 100%;
   border: 2px solid green;
   display:flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   flex-direction: row;
-  margin:25px;
+  background-image: url("https://images.unsplash.com/photo-1526494351053-7f0eee3c4216?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80");
+
 }
 
 .payment {
+  background-color: whitesmoke;
   border: 4px solid red;
   display:flex;
   flex-direction: column;
@@ -14,6 +18,7 @@
 }
 
 #postOrder {
+  background-color: whitesmoke;
   display: none;
   width: 300px;
   height: 200px;
