--- a/styles/checkout.scss
+++ b/styles/checkout.scss
@@ -1,27 +1,44 @@
 .checkoutLayout {
+  margin-top: 100px;
   height: 100%;
-  border: 2px solid green;
+  background-image: url("https://images.unsplash.com/photo-1526494351053-7f0eee3c4216?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80");
   display:flex;
-  flex-wrap: wrap;
   justify-content: space-around;
   flex-direction: row;
-  background-image: url("https://images.unsplash.com/photo-1526494351053-7f0eee3c4216?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80");
-
+  height: 90vh;
 }
 
 .payment {
-  background-color: whitesmoke;
-  border: 4px solid red;
+  background-color: rgba(245, 245, 245, 0.856);
   display:flex;
   flex-direction: column;
   align-content: space-between;
+  font-family: 'Permanent Marker', cursive;
+  height: 500px;
+  width: 400px;
+  margin-top: 50px;
+  border-radius: 15px;
+  align-items: center;
+
+
 }
 
 #postOrder {
-  background-color: whitesmoke;
   display: none;
   width: 300px;
   height: 200px;
+  align-self: center;
+
+}
+
+.itemTable {
+  margin-top: 50px;
+  background-color: rgba(245, 245, 245, 0.856);
+  font-size: 24px;
+  font-family: 'Permanent Marker', cursive;
+  border-radius: 15px;
+
+
 }
 
 input {
@@ -29,7 +46,16 @@ input {
 }
 
 #preOrder {
+  align-self: center;
   margin-top: 30px;
   font-size: 20px;
 
+}
+
+td {
+  padding: 10px;
+}
+
+th {
+  padding: 10px;
 }
