--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,7 +1,10 @@
 .partialHeader {
+  left:0;
+  top:0;
   background-color:black;
-  display: sticky;
+  position:fixed;
   height: 100px;
+  width:100%;
 }
 
 header nav {
