--- a/styles/owners.scss
+++ b/styles/owners.scss
@@ -1,35 +1,75 @@
 
 
-// .ownersContainer {
-//   display: flex;
-//   justify-content: space-between;
-//   height: 450px;
-// }
+html, body {
+  height: 100%;
+  margin: 0px;
+  }
+  .container {
+  height: 100%;
+   }
+  .ownersContainer {
+    display: flex;
+    justify-content: space-between;
+    min-height: 100%;
+    width: 100%;
+   background-image: url("https://images.unsplash.com/photo-1526494351053-7f0eee3c4216?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80");
+   font-family:'Permanent Marker', cursive;
+  }
+  .itemTable {
+    margin-top:100px;
+    width: 60%;
+    text-align: center;
+    font-size: 30px;
+    background-color: rgba(245, 245, 245, 0.856);;
+    border: 5px solid black;
+  }
+  .itemsTable {
+    width: 100%;
+    text-align: center;
+   }
+  .waitTime {
+    width: 100%;
+    font-size: 30px;
+    text-align: center;
+  }
+  .headerTable {
+    text-align: center;
+    width: 100%;
+  }
+  .customer {
+    margin-top: 25%;
+    font-size: 30px;
+    width: 35%;
+    margin-left: 50%;
+    border-radius: 15px;
+    border: 5px solid black;
+    background-color: whitesmoke;
+    opacity: 0.856;
+    outline: none;
+  }
+  .time {
+    font-family:'Permanent Marker', cursive;
+    outline: none;
+    color: black;
+    background-color: transparent;
+    outline: none;
+    border: transparent;
+    font-size: 30px;
+  }
+  .time:hover {
+    font-size: 35px;
+    background-color: transparent;
+    color: red;
+  }
 
-// .waitTime {
-//   border: 1px solid black;
-//   display: flex;
-//   justify-content: space-between;
-//   flex-direction: column;
-//  align-items: center;
-//  flex-grow: 1.25
-// }
+  .afterCustomerNotification {
+    background-color: rgba(245, 245, 245, 0.856);
+    margin-top:300px;
 
-// .itemTable {
-//   border: 1px solid black;
-//   display: flex;
-//   justify-content: space-between;
-//   flex-direction: column;
-//   align-items: center;
-//   flex-grow: 1.7;
-// }
+  }
 
-// .Total {
-//   display: flex;
-//   margin-bottom: auto;
-// }
-
-
-.afterCustomerNotification {
-  display:none;
-}
+  .afterCustomerNotificationTime {
+    width: 100px;
+    margin-left: 40px;
+    height: 40px;
+  }
