--- a/styles/header.scss
+++ b/styles/header.scss
@@ -11,14 +11,14 @@ header nav {
   display:flex;
   justify-content: space-between;
   align-items: center;
-
 }
 
 
 header nav a {
   margin-top:20px;
   color:white;
-  width: 400px;
+  max-width: 400px;
+  width:auto;
   text-decoration: none;
   font-size: 40px;
   font-family: 'Permanent Marker', cursive;
@@ -30,14 +30,15 @@ header nav a {
   font-size: 30px;
   margin-top: 20px;
   height: 50px;
-  width: 150px;
+  max-width: 150px;
+  width:auto;
   background-color: black;
   color:white;
   border-radius:2px;
   border:none;
   font-family:'Permanent Marker', cursive;
   outline: none;
-  margin-right: 250px;
+  margin-right: 150px;
 }
 
 .btn-checkout:hover {
@@ -47,3 +48,31 @@ header nav a {
 }
 
 
+
+@media screen and (max-width:800px) {
+  header nav a {
+    margin-bottom:40px;
+    margin-left:0;
+    font-size:30px;
+
+  }
+  .btn-checkout {
+    margin-right:0px;
+    margin-bottom: 40px;
+    font-size:20px
+
+  }
+}
+
+@media screen and (max-width:1200px) {
+  header nav a{
+    margin-bottom: 40px;
+    margin-left:50px;
+
+  }
+  .btn-checkout {
+    margin-right: 75px;
+    margin-bottom: 40px;
+
+  }
+}
